Changed the color of the generate button

--- a/Web_Tech_Remedial_NoelPhilip(Updated)/style.css
+++ b/Web_Tech_Remedial_NoelPhilip(Updated)/style.css
@@ -38,7 +38,7 @@
 	display: block;
     width: 100%;
     border: none;
-    background-color: #0069d9;
+    background-color: #007BFF;
     padding: 14px 28px;
     font-size: 16px;
     cursor: pointer;
